NAMESPACE edit to import functions from certain packages.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,6 @@
 #useDynLib(dvmisc)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, "evalCpp")
+importFrom("graphics", "axis", "lines", "plot")
+importFrom("stats", "qnorm", "qt", "sd")
 import(rbenchmark)
