Some minor changes to NAMESPACE/DESCRIPTION.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@11 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -9,5 +9,5 @@ Description: A collection of general-purpose R functions, most of which are eith
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark
-Imports: Rcpp (>= 0.11.0)
+Imports: Rcpp (>= 0.11.0), graphics, stats
 LinkingTo: Rcpp
