--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,10 +2,10 @@ Package: dvmisc
 Type: Package
 Title: Miscellaneous General-Purpose Functions
 Version: 1.1.1
-Date: 2017-04-06
+Date: 2017-04-10
 Author: Dane R. Van Domelen
 Maintainer: Dane R. Van Domelen <vandomed@gmail.com>
-Description: A collection of general-purpose R functions, most of which are either simple functions that do something convenient (e.g. create quantile groups, assess linearity in logistic regression) or faster versions of base R functions (e.g. run length encoding).
+Description: A collection of general-purpose R functions, most of which are either simple functions that do something convenient (e.g. create equal-interval groups, assess linearity in logistic regression) or faster versions of base R functions (e.g. run length encoding).
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark
