Importing functions from stats package in NAMESPACE.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@21 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,5 +2,6 @@
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, "evalCpp")
 importFrom("graphics", "axis", "lines", "plot", "legend")
-importFrom("stats", "qnorm", "qt", "sd", "aov", "binom.test", "prop.test", "t.test")
+importFrom("stats", "qnorm", "qt", "sd", "aov", "binom.test", "prop.test", 
+           "t.test", "chisq.test", "fisher.test", "quantile")
 import(rbenchmark)
