--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,5 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend")
 importFrom("stats", "qnorm", "qt", "sd", "aov", "binom.test", "prop.test",
-           "t.test", "chisq.test", "fisher.test", "quantile")
+           "t.test", "chisq.test", "fisher.test", "quantile", "anova")
 import(rbenchmark)
