Removed line breaks from package description in DESCRIPTION file. Line breaks seemed to be preventing a build.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@36 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,10 +5,7 @@ Version: 1.1.1
 Date: 2017-07-10
 Author: Dane R. Van Domelen
 Maintainer: Dane R. Van Domelen <vandomed@gmail.com>
-Description: A collection of general-purpose R functions, most of which are 
-simple functions that do something convenient, e.g. create equal-interval 
-groups, assess linearity in logistic regression, or extract MSE from a fitted 
-regression model.
+Description: A collection of general-purpose R functions, most of which are simple functions that do something convenient, e.g. create equal-interval groups, assess linearity in logistic regression, or extract MSE from a fitted regression model.
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark
