Added histo function and added MASS to Imports.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@39 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,4 +2,5 @@ exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend")
 importFrom("stats", "qnorm", "qt", "sd", "aov", "binom.test", "prop.test",
            "t.test", "chisq.test", "fisher.test", "quantile", "anova")
+importFrom("MASS", "fitdistr")
 import(rbenchmark)
