Addressed previous NOTE. Imported median and weighted.mean functions from stats package.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@40 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,7 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend")
 importFrom("stats", "qnorm", "qt", "sd", "aov", "binom.test", "prop.test",
-           "t.test", "chisq.test", "fisher.test", "quantile", "anova")
+           "t.test", "chisq.test", "fisher.test", "quantile", "anova",
+           "median", "weighted.mean")
 importFrom("MASS", "fitdistr")
 import(rbenchmark)
