Fixed a few warnings/notes related to new function points.bars, now re-named to dots.bars.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@52 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,6 @@
 exportPattern("^[[:alpha:]]+")
-importFrom("graphics", "axis", "lines", "plot", "legend", "hist", "points")
+importFrom("graphics", "axis", "lines", "plot", "legend", "hist", "points",
+           "arrows")
 importFrom("stats", "qnorm", "qt", "sd", "var", "cov", "cor", "aov",
            "binom.test", "prop.test", "t.test", "chisq.test", "fisher.test",
            "quantile", "anova", "median", "weighted.mean", "dbeta", "dbinom",
