Specified >= 0.5.0 for gee Import in DESCRIPTION.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@59 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -9,4 +9,4 @@ Description: A collection of general-purpose R functions, most of which are simp
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark
-Imports: graphics, stats, MASS, gee
+Imports: graphics, stats, MASS, gee (>= 0.5.0)
