Tried adding C++ function movingave.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@60 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,6 +7,6 @@ importFrom("stats", "qnorm", "qt", "sd", "var", "cov", "cor", "aov",
            "dcauchy", "dchisq", "dexp", "df", "dgamma", "dgeom", "dhyper",
            "dlnorm", "dnbinom", "dnorm", "dpois", "dt", "dunif", "dweibull",
            "nlminb")
+importFrom("Rcpp", "evalCpp")
 importFrom("MASS", "fitdistr")
 import(rbenchmark)
-import(gee)
