Hopefully getting movingave function to work. Added useDynLib(dvmisc) to NAMESPACE and made some other small tweaks.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@62 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,3 +1,4 @@
+useDynLib(dvmisc)
 exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend", "hist", "points",
            "arrows")
