Slight change to NAMESPACE:
useDynLib(dvmisc, .registration = TRUE)

git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@63 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,4 @@
-useDynLib(dvmisc)
+useDynLib(dvmisc, .registration = TRUE)
 exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend", "hist", "points",
            "arrows")
