Added a handful of new C++ functions, e.g. mean2, sd2, and cov2.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@65 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -10,4 +10,5 @@ importFrom("stats", "qnorm", "qt", "sd", "var", "cov", "cor", "aov",
            "nlminb")
 importFrom("Rcpp", "evalCpp")
 importFrom("MASS", "fitdistr")
+importFrom("microbenchmark", "microbenchmark")
 import(rbenchmark)
