--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -10,5 +10,5 @@ importFrom("stats", "qnorm", "qt", "sd", "var", "cov", "cor", "aov",
            "nlminb")
 importFrom("Rcpp", "evalCpp")
 importFrom("MASS", "fitdistr")
-importFrom("microbenchmark", "microbenchmark")
 import(rbenchmark)
+import(microbenchmark)
