--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,10 +2,10 @@ Package: dvmisc
 Type: Package
 Title: Miscellaneous General-Purpose Functions
 Version: 1.1.1
-Date: 2017-10-08
+Date: 2017-10-10
 Author: Dane R. Van Domelen
 Maintainer: Dane R. Van Domelen <vandomed@gmail.com>
-Description: A collection of general-purpose R functions, some of which are faster versions of base R functions  most of which are simple functions that do something convenient, e.g. easily create histogram with fitted PDF/PMF curve, create equal-interval groups, assess linearity in logistic regression, or extract MSE from a fitted regression model.
+Description: Faster versions of base R functions (e.g. for calculating standard deviation, covariance, and weighted mean) and miscellaneous functions that do something convenient (e.g. create histogram with fitted PDF/PMF curve, create BMI groups, assess linearity assumption in logistic regression, extract MSE from a fitted regression model).
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark, microbenchmark
