--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: dvmisc
 Type: Package
-Title: Miscellaneous General-Purpose Functions
+Title: Faster Computation of Common Statistics and Miscellaneous Functions
 Version: 1.1.1
-Date: 2017-10-14
+Date: 2017-11-03
 Author: Dane R. Van Domelen
 Maintainer: Dane R. Van Domelen <vandomed@gmail.com>
-Description: Faster versions of base R functions (e.g. for calculating standard deviation, covariance, and weighted mean) and miscellaneous functions that do something convenient (e.g. create histogram with fitted PDF/PMF curve, create BMI groups, assess linearity assumption in logistic regression, extract MSE from a fitted regression model).
+Description: Faster versions of base R functions (e.g. mean, standard deviation, covariance, and weighted mean) along with miscellaneous functions for various purposes (e.g. create histogram with fitted PDF/PMF curve, create BMI groups, assess linearity assumption in logistic regression, extract MSE from a fitted regression model).
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark, microbenchmark
