--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,10 +2,10 @@ Package: dvmisc
 Type: Package
 Title: Faster Computation of Common Statistics and Miscellaneous Functions
 Version: 1.1.1
-Date: 2017-11-03
+Date: 2017-11-05
 Author: Dane R. Van Domelen
 Maintainer: Dane R. Van Domelen <vandomed@gmail.com>
-Description: Faster versions of base R functions (e.g. mean, standard deviation, covariance, and weighted mean) along with miscellaneous functions for various purposes (e.g. create histogram with fitted PDF/PMF curve, create BMI groups, assess linearity assumption in logistic regression, extract MSE from a fitted regression model).
+Description: Faster versions of base R functions (e.g. mean, standard deviation, covariance, weighted mean), mostly written in C++, along with miscellaneous functions for various purposes (e.g. create histogram with fitted probability density function or probability mass function curve, create body mass index groups, assess linearity assumption in logistic regression).
 LazyData: true
 License: GPL-2
 Depends: R (>= 3.0.0), rbenchmark, microbenchmark
