--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,13 +2,15 @@ useDynLib(dvmisc, .registration = TRUE)
 exportPattern("^[[:alpha:]]+")
 importFrom("graphics", "axis", "lines", "plot", "legend", "hist", "points",
            "arrows")
+importFrom("MASS", "fitdistr")
+importFrom("Rcpp", "evalCpp")
 importFrom("stats", "qnorm", "qt", "sd", "var", "cov", "cor", "aov",
            "binom.test", "prop.test", "t.test", "chisq.test", "fisher.test",
            "quantile", "anova", "median", "weighted.mean", "dbeta", "dbinom",
            "dcauchy", "dchisq", "dexp", "df", "dgamma", "dgeom", "dhyper",
            "dlnorm", "dnbinom", "dnorm", "dpois", "dt", "dunif", "dweibull",
            "nlminb")
-importFrom("Rcpp", "evalCpp")
-importFrom("MASS", "fitdistr")
-import(rbenchmark)
+importFrom("utils", "head", "tail")
 import(microbenchmark)
+import(rbenchmark)
+
