Again, tried just copy and pasting everything. File name issue should be fixed.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dvmisc@99 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,26 +8,26 @@ export(diff1_i)
 export(diff1_n)
 export(diff_i)
 export(diff_n)
-export(dots.bars)
-export(get.mse)
+export(dots_bars)
+export(get_mse)
 export(headtail)
 export(histo)
 export(inside)
-export(interval.groups)
-export(list.override)
+export(interval_groups)
+export(list_override)
 export(logit_prob)
-export(logodds.graph)
+export(logodds_graph)
 export(max_n)
 export(mean_i)
 export(mean_n)
-export(means.graph)
+export(means_graph)
 export(min_n)
 export(odds_prob)
 export(pooled_var_i)
 export(pooled_var_n)
 export(prob_logit)
 export(prob_odds)
-export(quant.groups)
+export(quant_groups)
 export(range_i)
 export(range_n)
 export(sd_i)
